revised week3 report

--- a/notebooks/basic_analysis.ipynb
+++ b/notebooks/basic_analysis.ipynb
@@ -2043,7 +2043,7 @@
    "id": "9ddc0ae3-147a-4394-b236-5a8a757251a7",
    "metadata": {},
    "source": [
-    "##\n",
+    "### Further Hourly Exploration\n",
     "\n",
     "For more granualar options in comparing different plots, periods, and days of the week check out this [Dash App](https://aujxn.dev/traffic) I created for easier data exploration."
    ]
