--- a/report/report.tex
+++ b/report/report.tex
@@ -122,6 +122,7 @@ generalized well for our data. The knots for $\hat s_3$ were chosen because we a
 
 \subsection{Maximum Mean Discrepancy (MMD)}
 
+One of the most fundamental tasks in traffic data analysis is identifying distributional changes over time, particularly before and after major events such as the COVID-19 pandemic. Traditional statistical methods often rely on parametric assumptions, but real-world traffic data is complex, high-dimensional, and often does not follow simple parametric distributions. A common approach to address this issue is to use Maximum Mean Discrepancy (MMD), a kernel-based statistical test that quantifies differences between two distributions without assuming any specific parametric form.
 \section{Results}
 
 \subsection{Generalized Additive Model (GAM)}
