--- a/report/report.tex
+++ b/report/report.tex
@@ -204,6 +204,27 @@ This methodology allows us to determine whether the observed shift in traffic pa
 
 \subsection{Maximum Mean Discrepancy (MMD)}
 
+To evaluate the statistical significance of traffic pattern shifts, we applied the Maximum Mean Discrepancy (MMD) test along with a permutation test. The results are visualized in heatmaps, where each cell represents the p-value associated with traffic distribution changes for a specific combination of day type and month group.
+
+\subsubsection{Key Observations and Implications}
+
+The findings indicate that the most notable adjustments in traffic patterns occur midweek (Tuesday–Thursday), where consistent shifts are observed across multiple month groups. Mondays and Fridays display a more variable pattern, with changes appearing more context-dependent. Weekend traffic remains relatively stable, with some month-specific variations.
+
+These observations suggest that changes in travel behavior post-pandemic are more evident in structured weekday commuting patterns rather than in discretionary weekend travel. Additionally, differences between I-5 and I-205 may be influenced by location-specific factors such as infrastructure, urbanization, or regional travel demand.
+
+\subsubsection{Summary of Observations}
+
+Based on the analysis, the following key patterns emerge:
+
+\begin{enumerate}
+    \item Tuesday–Thursday traffic shows consistent changes across all month groups, suggesting adjustments in midweek commuting behavior.
+    \item Monday and Friday display variability in changes, with certain months exhibiting stability and others showing shifts.
+    \item Weekend travel remains largely stable, particularly on I-5, while I-205 exhibits some month-dependent variations.
+    \item I-5 demonstrates broader consistency in traffic changes, while I-205 presents greater fluctuations across different month groups.
+\end{enumerate}
+
+These findings highlight how post-pandemic travel behavior varies across different day types, with midweek commuting experiencing the most pronounced shifts, while weekend travel remains relatively stable.
+
 \section{Conclusions}
 
 \appendix
